--- a/5th lab/index.html
+++ b/5th lab/index.html
@@ -9,41 +9,27 @@
     	var elt = document.getElementById('calculator');
     	var calculator = Desmos.GraphingCalculator(elt);
 	    calculator.keypad=true;
-	    calculator.setExpression({ id: 'f', latex: 'f(x)=(x-(0.2))/(-0.1)*(x-(0.3))/(-0.19999999999999998)*(x-(0.4))/(-0.30000000000000004)*(x-(0.5))/(-0.4)*1.25+(x-(0.1))/(0.1)*(x-(0.3))/(-0.09999999999999998)*(x-(0.4))/(-0.2)*(x-(0.5))/(-0.3)*2.38+(x-(0.1))/(0.19999999999999998)*(x-(0.2))/(0.09999999999999998)*(x-(0.4))/(-0.10000000000000003)*(x-(0.5))/(-0.2)*3.79+(x-(0.1))/(0.30000000000000004)*(x-(0.2))/(0.2)*(x-(0.3))/(0.10000000000000003)*(x-(0.5))/(-0.09999999999999998)*5.44+(x-(0.1))/(0.4)*(x-(0.2))/(0.3)*(x-(0.3))/(0.2)*(x-(0.4))/(0.09999999999999998)*7.14' });
-calculator.setExpression({ id: 'g', latex: 'g(x)=1.25 + (x-0.1)(11.299999999999999)+(x-0.1)(x-0.2)(14.000000000000009)+(x-0.1)(x-0.2)(x-0.3)(-6.6666666666666705)+(x-0.1)(x-0.2)(x-0.3)(x-0.4)(-62.500000000000504)' });
+	    calculator.setExpression({ id: 'f', latex: 'f(x)=(x-(0.55))/(-0.050000000000000044)*(x-(0.6))/(-0.09999999999999998)*(x-(0.65))/(-0.15000000000000002)*(x-(0.7))/(-0.19999999999999996)*(x-(0.75))/(-0.25)*(x-(0.8))/(-0.30000000000000004)*1.532+(x-(0.5))/(0.050000000000000044)*(x-(0.6))/(-0.04999999999999993)*(x-(0.65))/(-0.09999999999999998)*(x-(0.7))/(-0.1499999999999999)*(x-(0.75))/(-0.19999999999999996)*(x-(0.8))/(-0.25)*2.5356+(x-(0.5))/(0.09999999999999998)*(x-(0.55))/(0.04999999999999993)*(x-(0.65))/(-0.050000000000000044)*(x-(0.7))/(-0.09999999999999998)*(x-(0.75))/(-0.15000000000000002)*(x-(0.8))/(-0.20000000000000007)*3.5406+(x-(0.5))/(0.15000000000000002)*(x-(0.55))/(0.09999999999999998)*(x-(0.6))/(0.050000000000000044)*(x-(0.7))/(-0.04999999999999993)*(x-(0.75))/(-0.09999999999999998)*(x-(0.8))/(-0.15000000000000002)*4.5462+(x-(0.5))/(0.19999999999999996)*(x-(0.55))/(0.1499999999999999)*(x-(0.6))/(0.09999999999999998)*(x-(0.65))/(0.04999999999999993)*(x-(0.75))/(-0.050000000000000044)*(x-(0.8))/(-0.10000000000000009)*5.5504+(x-(0.5))/(0.25)*(x-(0.55))/(0.19999999999999996)*(x-(0.6))/(0.15000000000000002)*(x-(0.65))/(0.09999999999999998)*(x-(0.7))/(0.050000000000000044)*(x-(0.8))/(-0.050000000000000044)*6.5559+(x-(0.5))/(0.30000000000000004)*(x-(0.55))/(0.25)*(x-(0.6))/(0.20000000000000007)*(x-(0.65))/(0.15000000000000002)*(x-(0.7))/(0.10000000000000009)*(x-(0.75))/(0.050000000000000044)*7.5594' });
+calculator.setExpression({ id: 'g', latex: 'g(x)=1.532 + (x-0.5)(20.07199999999998)+(x-0.5)(x-0.55)(0.27999999999996866)+(x-0.5)(x-0.55)(x-0.6)(-1.0666666666665463)+(x-0.5)(x-0.55)(x-0.6)(x-0.65)(-7.9999999999990905)+(x-0.5)(x-0.55)(x-0.6)(x-0.65)(x-0.7)(157.33333333333306)+(x-0.5)(x-0.55)(x-0.6)(x-0.65)(x-0.7)(x-0.75)(-1475.555555555701)' });
 	calculator.setExpression({
   type: 'table',
   columns: [
     {
       latex: 'x',
-      values: [0.1, 0.2, 0.3, 0.4, 0.5],
+      values: [0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8],
     },
     {
       latex: 'y',
-      values: [1.25, 2.38, 3.79, 5.44, 7.14],
+      values: [1.532, 2.5356, 3.5406, 4.5462, 5.5504, 6.5559, 7.5594],
       color: Desmos.Colors.BLUE,
       columnMode: Desmos.ColumnModes.POINTS
     }
   ]
 });
-  </script>
+calculator.setExpression({
+  id: 'pointA',
+  latex: '(0.651,4.566294839427492)',
+  pointStyle: Desmos.Styles.CROSS
+});  </script>
 </body>
-</html>)/(0.09999999999999998)*7.14' });
-	calculator.setExpression({
-  type: 'table',
-  columns: [
-    {
-      latex: 'x',
-      values: [0.1, 0.2, 0.3, 0.4, 0.5],
-    },
-    {
-      latex: 'y',
-      values: [1.25, 2.38, 3.79, 5.44, 7.14],
-      color: Desmos.Colors.BLUE,
-      columnMode: Desmos.ColumnModes.POINTS
-    }
-  ]
-});
-  </script>
-</body>
-</html>
+</html>>
